--- a/smart-home-frontend/package.json
+++ b/smart-home-frontend/package.json
@@ -21,7 +21,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -35,7 +34,7 @@
     "lucide-react": "^0.408.0",
     "mongodb": "^6.8.0",
     "mqtt": "^5.8.1",
-    "next": "^14.2.5",
+    "next": "^15.3.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -55,8 +54,9 @@
     "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
